libavcodec_neon_optional_sources = {
  'mpegvideo' : files('mpegvideo.c'),
}

libavcodec_neon_x86asm_optional_sources = {
}

libavcodec_neon_armv5te_optional_sources = {
}

libavcodec_neon_armv6_optional_sources = {
}

libavcodec_neon_armv8_optional_sources = {
}

libavcodec_neon_neon_optional_sources = {
}

libavcodec_neon_vfp_optional_sources = {
}

libavcodec_neon_mmx_optional_sources = {
}

libavcodec_neon_shlib_optional_sources = {
}

libavcodec_neon_slib_optional_sources = {
}

libavcodec_neon_optional_tests = {
}

