libavfilter_aarch64_optional_sources = {
  'nlmeans_filter' : files('vf_nlmeans_init.c'),
}

libavfilter_aarch64_x86asm_optional_sources = {
}

libavfilter_aarch64_armv5te_optional_sources = {
}

libavfilter_aarch64_armv6_optional_sources = {
}

libavfilter_aarch64_armv8_optional_sources = {
}

libavfilter_aarch64_neon_optional_sources = {
  'nlmeans_filter' : files('vf_nlmeans_neon.S'),
}

libavfilter_aarch64_vfp_optional_sources = {
}

libavfilter_aarch64_mmx_optional_sources = {
}

libavfilter_aarch64_shlib_optional_sources = {
}

libavfilter_aarch64_slib_optional_sources = {
}

libavfilter_aarch64_optional_tests = {
}

