libavfilter_dnn_optional_sources = {
  'dnn' : files('dnn_interface.c','dnn_backend_native.c','dnn_backend_native_layers.c','dnn_backend_native_layer_pad.c','dnn_backend_native_layer_conv2d.c','dnn_backend_native_layer_depth2space.c','dnn_backend_native_layer_maximum.c','dnn_backend_native_layer_mathbinary.c','dnn_backend_native_layer_mathunary.c'),
}

libavfilter_dnn_x86asm_optional_sources = {
}

libavfilter_dnn_mmx_optional_sources = {
}

libavfilter_dnn_optional_tests = {
}

