libavfilter_dnn_optional_sources = {
  # Manual:
  'dnn' : files('dnn_interface.c','dnn_io_proc.c','queue.c','safe_queue.c','dnn_backend_native.c','dnn_backend_native_layers.c','dnn_backend_native_layer_avgpool.c','dnn_backend_native_layer_dense.c','dnn_backend_native_layer_pad.c','dnn_backend_native_layer_conv2d.c','dnn_backend_native_layer_depth2space.c','dnn_backend_native_layer_maximum.c','dnn_backend_native_layer_mathbinary.c','dnn_backend_native_layer_mathunary.c', '../dnn_filter_common.c')
}

libavfilter_dnn_x86asm_optional_sources = {
}

libavfilter_dnn_mmx_optional_sources = {
}

libavfilter_dnn_optional_tests = {
}

