libavfilter_x86_optional_sources = {
  'afir_filter' : files(['af_afir_init.c',]),
  'blend_filter' : files(['vf_blend_init.c',]),
  'bwdif_filter' : files(['vf_bwdif_init.c',]),
  'colorspace_filter' : files(['colorspacedsp_init.c',]),
  'eq_filter' : files(['vf_eq.c',]),
  'framerate_filter' : files(['vf_framerate_init.c',]),
  'fspp_filter' : files(['vf_fspp_init.c',]),
  'gradfun_filter' : files(['vf_gradfun_init.c',]),
  'hflip_filter' : files(['vf_hflip_init.c',]),
  'hqdn3d_filter' : files(['vf_hqdn3d_init.c',]),
  'idet_filter' : files(['vf_idet_init.c',]),
  'interlace_filter' : files(['vf_tinterlace_init.c',]),
  'limiter_filter' : files(['vf_limiter_init.c',]),
  'maskedmerge_filter' : files(['vf_maskedmerge_init.c',]),
  'noise_filter' : files(['vf_noise.c',]),
  'overlay_filter' : files(['vf_overlay_init.c',]),
  'pp7_filter' : files(['vf_pp7_init.c',]),
  'psnr_filter' : files(['vf_psnr_init.c',]),
  'pullup_filter' : files(['vf_pullup_init.c',]),
  'removegrain_filter' : files(['vf_removegrain_init.c',]),
  'showcqt_filter' : files(['avf_showcqt_init.c',]),
  'spp_filter' : files(['vf_spp.c',]),
  'ssim_filter' : files(['vf_ssim_init.c',]),
  'stereo3d_filter' : files(['vf_stereo3d_init.c',]),
  'tblend_filter' : files(['vf_blend_init.c',]),
  'threshold_filter' : files(['vf_threshold_init.c',]),
  'tinterlace_filter' : files(['vf_tinterlace_init.c',]),
  'volume_filter' : files(['af_volume_init.c',]),
  'w3fdif_filter' : files(['vf_w3fdif_init.c',]),
  'yadif_filter' : files(['vf_yadif_init.c',]),
}

libavfilter_x86_x86asm_optional_sources = {
  'afir_filter' : files(['af_afir.asm',]),
  'blend_filter' : files(['vf_blend.asm',]),
  'bwdif_filter' : files(['vf_bwdif.asm',]),
  'colorspace_filter' : files(['colorspacedsp.asm',]),
  'framerate_filter' : files(['vf_framerate.asm',]),
  'fspp_filter' : files(['vf_fspp.asm',]),
  'gradfun_filter' : files(['vf_gradfun.asm',]),
  'hflip_filter' : files(['vf_hflip.asm',]),
  'hqdn3d_filter' : files(['vf_hqdn3d.asm',]),
  'idet_filter' : files(['vf_idet.asm',]),
  'interlace_filter' : files(['vf_interlace.asm',]),
  'limiter_filter' : files(['vf_limiter.asm',]),
  'maskedmerge_filter' : files(['vf_maskedmerge.asm',]),
  'overlay_filter' : files(['vf_overlay.asm',]),
  'pp7_filter' : files(['vf_pp7.asm',]),
  'psnr_filter' : files(['vf_psnr.asm',]),
  'pullup_filter' : files(['vf_pullup.asm',]),
  'removegrain_filter' : files(['vf_removegrain.asm',]),
  'showcqt_filter' : files(['avf_showcqt.asm',]),
  'ssim_filter' : files(['vf_ssim.asm',]),
  'stereo3d_filter' : files(['vf_stereo3d.asm',]),
  'tblend_filter' : files(['vf_blend.asm',]),
  'threshold_filter' : files(['vf_threshold.asm',]),
  'tinterlace_filter' : files(['vf_interlace.asm',]),
  'volume_filter' : files(['af_volume.asm',]),
  'w3fdif_filter' : files(['vf_w3fdif.asm',]),
  'yadif_filter' : files(['vf_yadif.asm','yadif-16.asm','yadif-10.asm',]),
}

libavfilter_x86_mmx_optional_sources = {
}

libavfilter_x86_optional_tests = {
}
