libavresample_arm_sources = files(
  'audio_convert_init.c',
  'resample_init.c',
)

libavresample_arm_optional_sources = {
  'neon_clobber_test' : files('neontest.c'),
}

libavresample_arm_x86asm_optional_sources = {
}

libavresample_arm_armv5te_optional_sources = {
}

libavresample_arm_armv6_optional_sources = {
}

libavresample_arm_armv8_optional_sources = {
}

libavresample_arm_neon_sources = files(
  'audio_convert_neon.S',
  'resample_neon.S',
)

libavresample_arm_neon_optional_sources = {
}

libavresample_arm_vfp_optional_sources = {
}

libavresample_arm_mmx_optional_sources = {
}

libavresample_arm_optional_tests = {
}

