libavresample_x86_sources = files(
  'audio_convert_init.c',
  'audio_mix_init.c',
  'dither_init.c',
)

libavresample_x86_optional_sources = {
  'xmm_clobber_test' : files('w64xmmtest.c'),
}

libavresample_x86_x86asm_sources = files(
  'audio_convert.asm',
  'audio_mix.asm',
  'dither.asm',
)

libavresample_x86_x86asm_optional_sources = {
}

libavresample_x86_mmx_optional_sources = {
}

libavresample_x86_optional_tests = {
}

