libavutil_aarch64_sources = files(
  'cpu.c',
  'float_dsp_init.c',
)

libavutil_aarch64_optional_sources = {
}

libavutil_aarch64_x86asm_optional_sources = {
}

libavutil_aarch64_armv5te_optional_sources = {
}

libavutil_aarch64_armv6_optional_sources = {
}

libavutil_aarch64_armv8_optional_sources = {
}

libavutil_aarch64_neon_sources = files(
  'float_dsp_neon.S',
)

libavutil_aarch64_neon_optional_sources = {
}

libavutil_aarch64_vfp_optional_sources = {
}

libavutil_aarch64_mmx_optional_sources = {
}

libavutil_aarch64_shlib_optional_sources = {
}

libavutil_aarch64_slib_optional_sources = {
}

libavutil_aarch64_optional_tests = {
}

