libavutil_arm_sources = files(
  'cpu.c',
  'float_dsp_init_arm.c',
)

libavutil_arm_optional_sources = {
}

libavutil_arm_x86asm_optional_sources = {
}

libavutil_arm_armv5te_optional_sources = {
}

libavutil_arm_armv6_optional_sources = {
}

libavutil_arm_armv8_optional_sources = {
}

libavutil_arm_neon_sources = files(
  'float_dsp_init_neon.c',
  'float_dsp_neon.S',
)

libavutil_arm_neon_optional_sources = {
}

libavutil_arm_vfp_sources = files(
  'float_dsp_init_vfp.c',
  'float_dsp_vfp.S',
)

libavutil_arm_vfp_optional_sources = {
}

libavutil_arm_mmx_optional_sources = {
}

libavutil_arm_shlib_optional_sources = {
}

libavutil_arm_slib_optional_sources = {
}

libavutil_arm_optional_tests = {
}

