libavutil_x86_sources = files(
  'cpu.c',
  'fixed_dsp_init.c',
  'float_dsp_init.c',
  'imgutils_init.c',
  'lls_init.c',
)

libavutil_x86_optional_sources = {
  'pixelutils' : files('pixelutils_init.c'),
}

libavutil_x86_x86asm_sources = files(
  'cpuid.asm',
  'fixed_dsp.asm',
  'float_dsp.asm',
  'imgutils.asm',
  'lls.asm',
)

libavutil_x86_x86asm_optional_sources = {
  'pixelutils' : files('pixelutils.asm'),
}

libavutil_x86_mmx_optional_sources = {
}

libavutil_x86_optional_tests = {
}

