libswresample_aarch64_sources = files(
  'audio_convert_init.c',
  'resample_init.c',
)

libswresample_aarch64_optional_sources = {
  'neon_clobber_test' : files('neontest.c'),
}

libswresample_aarch64_x86asm_optional_sources = {
}

libswresample_aarch64_armv5te_optional_sources = {
}

libswresample_aarch64_armv6_optional_sources = {
}

libswresample_aarch64_armv8_optional_sources = {
}

libswresample_aarch64_neon_sources = files(
  'audio_convert_neon.S',
  'resample.S',
)

libswresample_aarch64_neon_optional_sources = {
}

libswresample_aarch64_vfp_optional_sources = {
}

libswresample_aarch64_mmx_optional_sources = {
}

libswresample_aarch64_optional_tests = {
}

