libswresample_arm_sources = files(
  'audio_convert_init.c',
  'resample_init.c',
)

libswresample_arm_optional_sources = {
  'neon_clobber_test' : files('neontest.c'),
}

libswresample_arm_x86asm_optional_sources = {
}

libswresample_arm_armv5te_optional_sources = {
}

libswresample_arm_armv6_optional_sources = {
}

libswresample_arm_armv8_optional_sources = {
}

libswresample_arm_neon_sources = files(
  'audio_convert_neon.S',
  'resample.S',
)

libswresample_arm_neon_optional_sources = {
}

libswresample_arm_vfp_optional_sources = {
}

libswresample_arm_mmx_optional_sources = {
}

libswresample_arm_optional_tests = {
}

