libswscale_aarch64_sources = files(
  'rgb2rgb.c',
  'swscale.c',
  'swscale_unscaled.c',
)

libswscale_aarch64_optional_sources = {
}

libswscale_aarch64_x86asm_optional_sources = {
}

libswscale_aarch64_armv5te_optional_sources = {
}

libswscale_aarch64_armv6_optional_sources = {
}

libswscale_aarch64_armv8_optional_sources = {
}

libswscale_aarch64_neon_sources = files(
  'hscale.S',
  'output.S',
  'rgb2rgb_neon.S',
  'yuv2rgb_neon.S',
)

libswscale_aarch64_neon_optional_sources = {
}

libswscale_aarch64_vfp_optional_sources = {
}

libswscale_aarch64_mmx_optional_sources = {
}

libswscale_aarch64_optional_tests = {
}

