libswscale_arm_sources = files(
  'swscale.c',
  'swscale_unscaled.c',
)

libswscale_arm_optional_sources = {
}

libswscale_arm_x86asm_optional_sources = {
}

libswscale_arm_armv5te_optional_sources = {
}

libswscale_arm_armv6_optional_sources = {
}

libswscale_arm_armv8_optional_sources = {
}

libswscale_arm_neon_sources = files(
  'rgb2yuv_neon_32.S',
  'rgb2yuv_neon_16.S',
  'hscale.S',
  'output.S',
  'yuv2rgb_neon.S',
)

libswscale_arm_neon_optional_sources = {
}

libswscale_arm_vfp_optional_sources = {
}

libswscale_arm_mmx_optional_sources = {
}

libswscale_arm_optional_tests = {
}

